# app.js
@@ -9,6 +9,7 @@ const cors = require('cors');
 var indexRouter = require('./routes/index');
 var usersRouter = require('./routes/users');
 var barangRouter = require('./routes/barangRoute');
+var transaksiRouter = require('./routes/transaksiRoute');
 var app = express();
 app.use(
     bodyParser.urlencoded({
@@ -39,6 +40,7 @@ app.use(express.static(path.join(__dirname, 'public')));
 app.use('/', indexRouter);
 app.use('/users', usersRouter);
 app.use('/barang', barangRouter);
+app.use('/transaksi', transaksiRouter);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocs));
 
 module.exports = app;
